plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.12'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'war'
}

group = 'project'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// 룸북
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//마이 바티스 추가
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'

	//json
	implementation 'org.json:json:20230227'

	//웹
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//시간
	implementation 'org.apache.commons:commons-lang3:3.12.0'

	//내장톰캣 추가
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'


}

//bootWar.enabled = true
//war.enabled = false

//war 이름
bootWar{
	archiveName("trainReservation.war")
}

tasks.named('test') {
	useJUnitPlatform()
}
